--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -1,9 +1,5 @@
 @use 'header';
 @use 'page';
 @import '_reset';
-@import 'colors';
-body{
-    background-color: #f3f3f3;
-}
 @include header.header;
-@include page.pageDefault;
+@include page.styles;
