--- a/resources/sass/pages/_listEvent.scss
+++ b/resources/sass/pages/_listEvent.scss
@@ -6,11 +6,19 @@
         display: flex;
         align-items: center;
         height: 120px;
+        padding-right: 45px;
+        position: relative;
         >.figure{
-            width: 60px;
-            height: 60px;
-            border-radius: 7px;
+            width: 90px;
+            height: 90px;
             overflow: hidden;
+            >img{
+                width: 100%;
+                height: 100%;
+                object-fit: contain;
+                border-radius: 7px;
+                overflow: hidden;
+            }
         }
         >div{
             min-height: 70%;
@@ -25,8 +33,10 @@
             }
         }
         >.participar{
+            position: absolute;
+            top: calc( 50% - 22.5px);
+            right: 0;
             margin-left: auto;
-            position: relative;
             height: 45px;
             font-size: 20px;
             padding: 0 34px 0 0;
