--- a/resources/sass/pages/_pageDefault.scss
+++ b/resources/sass/pages/_pageDefault.scss
@@ -43,14 +43,14 @@ main{
             border: none;
             position: relative;
             cursor: pointer;
-            transition: background-color .2s ease;
+            transition: transform .2s ease;
             >svg{
                 position: absolute;
                 left: 14px;
                 top: 14px;
             }
             &:hover{
-                background-color: $secondary2;
+                transform: scale(1.1);
             }
         }
     }
