Adicionado logo e personalizado tela de login

--- a/resources/sass/parts/_header.scss
+++ b/resources/sass/parts/_header.scss
@@ -1,5 +1,5 @@
 @use '../colors' as *;
-header{
+.main_nav{
     display: flex;
     position: sticky;
     top: -1px;
@@ -27,5 +27,8 @@ header{
                 }
             }
         }
+    }
+    &-logo{
+        margin-left: 90px;
     }
 }
