feat(event): Participar do evento
Adicionado participar do evento, desparticipar do evento, feito ajustes
no css e no caminho da imagem do evento que não estava certo

--- a/resources/sass/form.scss
+++ b/resources/sass/form.scss
@@ -16,12 +16,13 @@
 }
 
 @mixin button{
+    display: inline-block;
     background-color: $secondary;
     font-size: 18px;
     font-weight: bold;
     border: 0;
     cursor: pointer;
-    color: white;;
+    color: white;
     border-radius: 9px;
     padding: 10px 30px;
 }
