--- a/resources/sass/parts/_reset.scss
+++ b/resources/sass/parts/_reset.scss
@@ -1,3 +1,4 @@
+@use '../form' as *;
 html {
     box-sizing: border-box;
     font-size: 16px;
@@ -28,4 +29,8 @@ html {
 
 body{
     background-color: #f3f3f3;
+}
+
+.btn{
+    @include button;
 }
